--- a/Devices/CSM/makefile
+++ b/Devices/CSM/makefile
@@ -106,13 +106,20 @@ LDFLAGS += $(PRINTF_LIB) $(SCANF_LIB) $(MATH_LIB)
 #AVRDUDE_PROGRAMMER = jtagmkII
 #AVRDUDE_PORT = usb
 #AVRDUDE_PROGRAMMER = stk500v2
-AVRDUDE_PROGRAMMER = avr109 -b 38400
-AVRDUDE_PORT = /dev/ttyUSB3
+#AVRDUDE_PROGRAMMER = avr109 -b 38400
+#AVRDUDE_PORT = /dev/ttyUSB3
+AVRDUDE_PROGRAMMER = STK500v1 -b 57600  # arduino mini pro 8MHZ bootloader
+AVRDUDE_PORT = /dev/ttyUSB0
+
+
+
 AVRDUDE_WRITE_FLASH = -U flash:w:$(TARGET).hex
 AVRDUDE_FLAGS = -p $(MCU) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROGRAMMER)
 AVRDUDE_FLAGS += $(AVRDUDE_NO_VERIFY)
 AVRDUDE_FLAGS += $(AVRDUDE_VERBOSE)
 AVRDUDE_FLAGS += $(AVRDUDE_ERASE_COUNTER)
+
+# avrdude -pm328p -b57600 -cSTK500v1 -P/dev/ttyUSB0 -Uflash:w:CSM.hex:i
 
 
 DEBUG_MFREQ = $(F_CPU)
